=================
Changes for Crate
=================

Unreleased
==========

 - COPY FROM now skips rows with the same primary key instead of overriding them

2015/02/06 0.47.0
=================

 - Added support for array comparisons using the equals ``=`` operator.

 - Support `INSERT ... ON DUPLICATE KEY UPDATE` statement

 - Added case-insensitive regex operator ~*

 - Support PCRE compatible regular expressions

 - updated crate-admin version to 0.11.3 which contains following changes:

    - fixed bug that showed custom schemas in the table list
      as often as the amount of tables in that custom schema

 - Added support for the ``std_dev``, ``variance`` and ``geometric_mean``
   aggregation functions

 - Added support for the CURRENT_TIMESTAMP expression

 - Throw an error while using unknown column references in ``SELECT``
   statements while parent's policy is not of type ``ignored``

 - Added support for the datetime function ``extract (field from source)``

 - Support column referencing in ``Update`` statement assignment
   expression

 - Removed undocumented feature: It is no longer possible to use sys
   expressions in any context.

 - don’t allow full qualified names in UPDATE assignments, INSERT and
   INSERT INTO

 - The ``sys.operations`` table has now a ``_nodes`` system column
   which exposes information about the node the operation runs on.

2015/02/06 0.46.5
=================

 - Upgrade Elasticsearch to v1.4.2

 - Fix: Hard wire utf-8 encoding in init scripts, so unicode filenames work

 - Fix: COPY FROM PARTITION failed if the source contained a ``partitioned by`` column

 - Fix: ALTER TABLE could break existing tables under some conditions

 - Fix: Improved value validation for nested primary key and clustered by
   columns in INSERT statements.

 - Fix: IP column validation is now done in analysis

2015/02/06 0.46.5
2015/02/06 0.45.9
=================

 - Fix: ``Insert-By-Query`` using objects did not work through wrong