@@ -34,7 +34,7 @@ public class Version {
     // the (internal) format of the id is there so we can easily do after/before checks on the id
 
 
-    public static final boolean SNAPSHOT = false;
+    public static final boolean SNAPSHOT = true;
     public static final Version CURRENT = new Version(470099, SNAPSHOT, org.elasticsearch.Version.V_1_4_2);
 
     static {
