@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Improved performance of queries that use the equals operator on arrays
+
  - COPY FROM now skips rows with the same primary key instead of overriding them
 
 2015/02/06 0.47.0
